--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     environment:
       POSTGRES_USER: vdi
       POSTGRES_PASSWORD: ${CACHE_DB_PASSWORD}
-      POSTGRES_DB: cache-db
+      POSTGRES_DB: vdi
     healthcheck:
       test: "pg_isready -U vdi -d vdi"
       start_period: 30s
