--- a/config/full-local-dev-config.yml
+++ b/config/full-local-dev-config.yml
@@ -147,6 +147,9 @@ vdi:
         projectIds:
         - ClinEpiDB
 
+  sharedTargetDbPooling:
+    maxSharedPoolSize: 20
+
   installTargets:
   - targetId: AmoebaDB
     controlDb: *ctrlDbConfig
@@ -178,14 +181,14 @@ vdi:
               properties:
                 countries: { minItems: 1 }
                 studySpecies: { minItems: 1 }
-                diseases: { minItems: 1 }
+                outcomes: { minItems: 1 }
                 associatedFactors: { minItems: 1 }
                 sampleTypes: { minItems: 1 }
               required:
               - countries
               - years
               - studySpecies
-              - diseases
+              - outcomes
               - associatedFactors
               - participantAges
               - sampleTypes
@@ -236,7 +239,7 @@ vdi:
               properties:
                 countries: { minItems: 1 }
                 studySpecies: { minItems: 1 }
-                diseases: { minItems: 1 }
+                outcomes: { minItems: 1 }
                 associatedFactors: { minItems: 1 }
                 sampleTypes: { minItems: 1 }
               required:
@@ -245,7 +248,7 @@ vdi:
               - countries
               - years
               - studySpecies
-              - diseases
+              - outcomes
               - associatedFactors
               - participantAges
               - sampleTypes
